.metadata/.plugins/org.eclipse.cdt.ui/hmm.build.log
19:56:02 **** Incremental Build of configuration Debug for project hmm ****
make all 
Building file: ../src/hmm.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/hmm.d" -MT"src/hmm.o" -o "src/hmm.o" "../src/hmm.c"
../src/hmm.c:19:25: error: expected identifier or '('
        double surfaceArea = 3,14 * baseRadius * (sqrt(baseRadius*baseRadius+baseHeight*baseHeight));;;;;
                               ^
../src/hmm.c:19:25: error: expected ';' at end of declaration
        double surfaceArea = 3,14 * baseRadius * (sqrt(baseRadius*baseRadius+baseHeight*baseHeight));;;;;
                               ^
                               ;
../src/hmm.c:20:22: error: expected identifier or '('
        double baseArea = 3,14 * baseRadius * baseRadius;;;;
                            ^
../src/hmm.c:20:22: error: expected ';' at end of declaration
        double baseArea = 3,14 * baseRadius * baseRadius;;;;
                            ^
                            ;
../src/hmm.c:21:20: error: expected identifier or '('
        double volume = 3,14 * baseRadius * baseRadius * baseHeight/3;
                          ^
../src/hmm.c:21:20: error: expected ';' at end of declaration
        double volume = 3,14 * baseRadius * baseRadius * baseHeight/3;
                          ^
                          ;
../src/hmm.c:23:14: warning: format specifies type 'double' but the argument has type 'char *' [-Wformat]
        printf("%f","%f","%f", surfaceArea, baseArea, volume);
                ~~  ^~~~
                %s
../src/hmm.c:23:19: warning: data argument not used by format string [-Wformat-extra-args]
        printf("%f","%f","%f", surfaceArea, baseArea, volume);
               ~~~~      ^
2 warnings and 6 errors generated.
make: *** [src/hmm.o] Error 1

19:56:03 Build Finished (took 148ms)

